--- a/auction/templates/view_auction.html
+++ b/auction/templates/view_auction.html
@@ -1,11 +1,36 @@
 {% extends 'layout.html' %}
+
+{% macro render_field(field) %}
+  <div class="field">
+    {{ field.label }}
+  {{ field(**kwargs)|safe }}
+  {% if field.errors %}
+    {% for error in field.errors %}
+    <div class="ui pointing red basic label">
+      {{ error }}
+    </div>
+    {% endfor %}
+  {% endif %}
+  </div>
+{% endmacro %}
+
 {% block content %}
 <h1>{{ auction.title }}</h1>
 
 <p>{{ auction.description }}</p>
 
-<form class="ui form" (ngSubmit)="onSubmit()">
+<!-- TODO: Protections against XSS forgery -->
+
+<form class="ui form" method="post" action="{{ url_for('main.create_bid') }}">
   <input type="hidden" name="auction_id" value="{{ auction.id }}"/>
+
+  {{ render_field(form.name, placeholder='이름') }}
+
+  {{ render_field(form.email, placeholder='이메일') }}
+
+  {{ render_field(form.price, placeholder='1000') }}
+
+  <!--
   <div class="field">
     <label>Name</label>
     <input type="text" name="name" placeholder="Name">
@@ -24,6 +49,7 @@
       <label>I agree to the Terms and Conditions</label>
     </div>
   </div>
+  -->
   <button class="ui button" type="submit">Submit</button>
 </form>
 {% endblock %}
