--- a/auction/templates/view_auction_bids.html
+++ b/auction/templates/view_auction_bids.html
@@ -18,7 +18,7 @@ Current price: {{ auction.current_price }}
   <tbody>
     {%- for bid in auction.ordered_bids %}
     <tr class="{{ '' if bid.confirmed else 'disabled' }}">
-      <td>{{ bid.bids_at }}</td>
+      <td>{{ bid.bids_at.strftime('%Y-%m-%d %H:%M:%S') }}</td>
       <td>{{ bid.email }}</td>
       <td>
         <i class="icon {{ 'checkmark' if bid.confirmed else 'attention' }}"></i>
