--- a/auction/templates/layout.html
+++ b/auction/templates/layout.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Auction</title>
+  <title>천원 경매</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -20,7 +20,7 @@
   <div class="ui fixed inverted menu">
     <div class="ui container">
       <a href="#" class="header item">
-        Auction
+        천원 경매
       </a>
 		</div>
   </div>
