--- a/auction/templates/view_auction.html
+++ b/auction/templates/view_auction.html
@@ -2,7 +2,8 @@
 {% block content %}
 <h1>{{ auction.title }}</h1>
 
-<p>{{ auction.description }}</p>
+<!-- NOTE: Can we trust Google Docs...? -->
+<p>{{ auction.gdocs_description|safe }}</p>
 
 <a href="{{ url_for('main.create_bid', auction_id=auction.id) }}"
   class="ui button primary">입찰하기</a>
