Format currency (in KRW)

--- a/auction/templates/macros.html
+++ b/auction/templates/macros.html
@@ -7,7 +7,7 @@
       </div>
       <div class="value">
         <!-- TODO: Format currency -->
-        {{ auction.current_price }}
+        {{ auction.current_price|format_currency }}
       </div>
     </div>
     <div class="statistic">
