--- a/auction/templates/create_bid.html
+++ b/auction/templates/create_bid.html
@@ -1,4 +1,5 @@
 {% extends 'layout.html' %}
+{% from 'macros.html' import auction_status %}
 
 {% macro render_field(field) %}
   <div class="field">
@@ -17,6 +18,8 @@
 {% block content %}
 
 <h1>Bidding for {{ auction.title }}</h1>
+
+{{ auction_status(auction) }}
 
 <!-- TODO: Protections against XSS forgery -->
 
