--- a/auction/templates/layout.html
+++ b/auction/templates/layout.html
@@ -13,8 +13,9 @@
     }
   </style>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="/assets/semantic/dist/semantic.min.js"></script>
+
 </head>
 <body>
   <div class="ui fixed inverted menu">
