--- a/auction/templates/create_bid.html
+++ b/auction/templates/create_bid.html
@@ -39,9 +39,13 @@
       <label>경매 규칙을  모두 이해하였으며 이에 동의합니다.</label>
     </div>
   </div>
-  <button class="ui button primary" type="submit">Submit</button>
+  {% if not auction.ended %}
+  <button class="ui button primary" type="submit">입찰</button>
+  {% else %}
+  <button class="ui button disabled">경매가 마감되었습니다</button>
+  {% endif %}
   <a href="{{ url_for('main.view_auction', auction_id=auction.id) }}"
-    class="ui button">Cancel</a>
+    class="ui button">상품 설명으로 돌아가기</a>
 </form>
 
 {% endblock %}
