Code refactoring for the UI

--- a/auction/templates/confirm_bid.html
+++ b/auction/templates/confirm_bid.html
@@ -12,7 +12,7 @@
         {{ render_field(form.code) }}
       </div>
       <div class="field">
-        <button class="ui default button">Confirm</button>
+        <button class="ui primary button">Confirm</button>
       </div>
     </div>
   </div>
