--- a/auction/templates/confirm_bid_email.html
+++ b/auction/templates/confirm_bid_email.html
@@ -17,4 +17,4 @@
 
 <h3>코드</h3>
 
-<pre><code>{{ bid.confirmation_code }}</code></pre> on {{ link }}
+<code>{{ bid.confirmation_code }}</code> on {{ link_without_code }}
