Show the current price grey
If the auction has no confirmed bids

--- a/auction/templates/macros.html
+++ b/auction/templates/macros.html
@@ -1,7 +1,7 @@
 {% macro auction_status(auction) %}
 <div class="ui segment">
   <div class="ui small statistics">
-    <div class="statistic">
+    <div class="statistic {% if auction.confirmed_bids.count() == 0 %}grey{% endif %}">
       <div class="label">
         {%- if auction.ended %}
         Final Price
