--- a/auction/templates/view_auction.html
+++ b/auction/templates/view_auction.html
@@ -16,4 +16,8 @@
 <a href="{{ url_for('main.view_auction_bids', auction_id=auction.id) }}"
   class="ui button">진행 상황 보기</a>
 
+<script>
+  $('.help').popup();
+</script>
+
 {% endblock %}
