--- a/auction/templates/view_auction_bids.html
+++ b/auction/templates/view_auction_bids.html
@@ -53,7 +53,7 @@
       <th>Email</th>
       <th>
         Bidding Price
-        <i class="help circle icon" data-html="도움말 준비중..."></i>
+        <i class="help circle icon" data-content="도움말 준비중..."></i>
       </th>
     </tr>
   </thead>
