--- a/auction/templates/layout.html
+++ b/auction/templates/layout.html
@@ -8,8 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="/assets/semantic/dist/semantic.min.css">
   <style>
-		.content {
-			margin-top: 4em;
+    body > div.content {
+      margin-top: 4em;
     }
   </style>
 
