Notify about confirmed bid

--- a/auction/templates/view_auction_bids.html
+++ b/auction/templates/view_auction_bids.html
@@ -34,8 +34,10 @@
       </div>
     </div>
     <div class="actions">
-      <div class="ui button">Cancel</div>
-      <div class="ui button">OK</div>
+      <div class="ui approve primary button">
+        <i class="checkmark icon"></i>
+        I understand
+      </div>
     </div>
   </div>
   {%- endfor %}
