--- a/auction/templates/create_bid.html
+++ b/auction/templates/create_bid.html
@@ -1,6 +1,22 @@
 {% extends 'layout.html' %}
 {% from 'macros.html' import auction_status, bidding_button, render_field %}
 
+{% macro render_checkbox(field, div_class='ui checkbox') %}
+  <div class="{{ div_class }}">
+    {{ field(**kwargs)|safe }}
+    {%- if field.label.text %}
+      <label>{{ field.label.text }}</label>
+    {%- endif %}
+    {%- if field.errors %}
+      {%- for error in field.errors %}
+      <div class="ui pointing red basic label">
+        {{ error }}
+      </div>
+      {%- endfor %}
+    {%- endif %}
+  </div>
+{% endmacro %}
+
 {% block content %}
 
 <h1>Bidding for {{ auction.title }}</h1>
@@ -19,18 +35,37 @@
   </div>
 
   {{ render_field(form.price, placeholder=auction.outbidding_price) }}
-
-  <!--
-  <div class="field">
-    <div class="ui checkbox">
-      <input type="checkbox" tabindex="0">
-      <label>경매 규칙을  모두 이해하였으며 이에 동의합니다.</label>
-    </div>
+  <div class="ui info message">
+    최고 입찰가는 내가 지불할 용의가 있는 최고 금액입니다. 경매 상황에
+    따라서 내가 적어낸 최고 입찰가보다 적은 가격에 낙찰될 수도 있습니다. 예를
+    들어서, A가 10,000원에 입찰하고 B가 20,000원에 입찰했다면 최종 낙찰 가격은
+    20,000원이 아니라 (두번째 최고 입찰가) + (증가폭)인 10,050원 입니다.
   </div>
-  -->
-  {{ bidding_button(auction, button=True) }}
-  <a href="{{ url_for('main.view_auction', auction_id=auction.id) }}"
-    class="ui button">상품 설명으로 돌아가기</a>
+
+  <h3 class="ui header">
+    <i class="checkmark box icon"></i>
+    경매 규칙
+  </h3>
+  <ul class="ui list">
+    <li>이름과 이메일 주소는 공개되지 않습니다.</li>
+    <li>
+      가장 높은 가격을 써낸 사람에게 낙찰됩니다. 만약 같은 가격을 써낸 사람이
+      있다면 먼저 입찰한 사람이 우선권을 가집니다.
+    </li>
+    <li>입찰은 취소할 수 없습니다.</li>
+    <li>
+      낙찰 후 연락이 되지 않거나 물품 대금이 지급되지 않을 경우 앞으로 제가
+      진행하는 모든 경매에 참여하실 수 없게 됩니다.
+    </li>
+  </ul>
+
+  {{ render_checkbox(form.consent) }}
+
+  <div class="ui field" style="margin-top:1em">
+    {{ bidding_button(auction, button=True) }}
+    <a href="{{ url_for('main.view_auction', auction_id=auction.id) }}"
+      class="ui button">상품 설명으로 돌아가기</a>
+  </div>
 </form>
 
 {% endblock %}
