Adjust page margin

--- a/auction/templates/layout.html
+++ b/auction/templates/layout.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/assets/semantic/dist/semantic.min.css">
   <style>
     body > div.content {
-      margin-top: 4em;
+      margin: 4em 0 2em 0;
     }
   </style>
 
