Show a list of auctions

--- a/auction/templates/layout.html
+++ b/auction/templates/layout.html
@@ -23,6 +23,7 @@
       <a href="#" class="header item">
         천원 경매
       </a>
+      <a href="{{ url_for('main.list_auctions') }}" class="item">진행중인 경매</a>
 		</div>
   </div>
 
