--- a/auction/templates/confirm_bid_email.html
+++ b/auction/templates/confirm_bid_email.html
@@ -1,3 +1,5 @@
+{% set link = host + url_for('main.confirm_bid', bid_id=bid.id, code=bid.confirmation_code) %}
+{% set link_without_code = host + url_for('main.confirm_bid', bid_id=bid.id) %}
 <style>
   body, p {
     font-family: sans-serif;
@@ -7,9 +9,13 @@
 
 <p>안녕하세요, {{ bid.name }}님.</p>
 
-<p>[천원 경매] 입찰 확인 이메일입니다.  <b>{{ bid.auction.title }}</b> 매물에
+<p>
+  [천원 경매] 입찰 확인 이메일입니다.
+  <a href="{{ host }}{{ url_for('main.view_auction_bids', auction_id=bid.auction.id) }}">
+    {{ bid.auction.title }}</a> 매물에
   <b>{{ bid.price|format_currency }}</b>으로 입찰하셨습니다.
-  아래 링크를 클릭하거나 확인 코드를 붙여넣어야 입찰이 완료됩니다.<p>
+  아래 링크를 클릭하거나 확인 코드를 붙여넣어야 입찰이 완료됩니다.
+<p>
 
 <h3>링크</h3>
 
