Getting started with seller's interface

--- a/auction/templates/layout.html
+++ b/auction/templates/layout.html
@@ -24,6 +24,13 @@
         천원 경매
       </a>
       <a href="{{ url_for('main.list_auctions') }}" class="item">진행중인 경매</a>
+      <div class="ui simple dropdown item">
+        판매 <i class="dropdown icon"></i>
+        <div class="menu">
+          <a href="{{ url_for('main.create_auction') }}" class="item">상품 등록</a>
+          <a href="{{ url_for('main.register_seller') }}" class="item">판매자 등록</a>
+        </div>
+      </div>
 		</div>
   </div>
 
