Create an Auction record

--- a/auction/templates/create_auction.html
+++ b/auction/templates/create_auction.html
@@ -11,7 +11,7 @@
   {{ render_field(form.description, placeholder='') }}
 
   <!-- TODO: I'd like to make this as a premium feature -->
-  {{ render_field(form.starts_at, placeholder='') }}
+  <!-- {{ render_field(form.starts_at, placeholder='') }} -->
 
   {{ render_field(form.duration, placeholder='') }}
 
