--- a/auction/templates/view_seller.html
+++ b/auction/templates/view_seller.html
@@ -1,37 +1,11 @@
 {% extends 'layout.html' %}
+{% from 'macros.html' import list_auctions %}
 {% block content %}
 <h1 class="ui header">{{ seller.localized_name }}</h1>
 
 <h2>Auctions</h2>
 
-<table class="ui table">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Current Price</th>
-      <th>Ending Date</th>
-    </tr>
-  </thead>
-  <tbody>
-    {%- for auction in seller.auctions %}
-    <tr>
-      <td>
-        <a href="{{ url_for('main.view_auction', auction_id=auction.id) }}">
-          {{ auction.title }}
-        </a>
-      </td>
-      <td>{{ auction.current_price|format_currency }}</td>
-      <td>
-        {%- if auction.ended %}
-        <span class="ui text disabled">Ended</span>
-        {%- else %}
-        {{ auction.ends_at|format_datetime }} UTC
-        {%- endif %}
-      </td>
-    </tr>
-    {%- endfor %}
-  </tbody>
-</table>
+{{ list_auctions(seller.auctions) }}
 
 {% endblock %}
 
