--- a/auction/templates/layout.html
+++ b/auction/templates/layout.html
@@ -31,6 +31,12 @@
           <a href="{{ url_for('main.register_seller') }}" class="item">판매자 등록</a>
         </div>
       </div>
+
+      <div class="right menu">
+        {%- if current_user.is_authenticated %}
+        <a href="{{ url_for('user.logout') }}" class="item">Logout</a>
+        {%- endif %}
+      </div>
 		</div>
   </div>
 
