Put a silly image

--- a/auction/templates/register_seller.html
+++ b/auction/templates/register_seller.html
@@ -12,4 +12,9 @@
   합니다. 콩글리시 엑센트는 안돼요.
 </p>
 
+<p>
+  <img src="https://lh4.googleusercontent.com/PDrn72ifrP8BgwJ48LxCb78-nDZWFIyznC5qVNg_MJHGwgcu6CBoVRqYY7Rr4w54uktCXYpDtZCtPdbkQnNMeX5L6JnFIcXhW6ITnxpiE3h5PfbSE0fnWK1CXI9VEak_E5SfIrQG"
+    style="max-width:100%"/>
+</p>
+
 {% endblock %}
