Revise seller registration page (fake)

--- a/auction/templates/register_seller.html
+++ b/auction/templates/register_seller.html
@@ -1,20 +1,30 @@
 {% extends 'layout.html' %}
 {% block content %}
 
-<h1>판매자 등록</h1>
-
-<p>
-  [천원경매] 판매자 등록은 아직 내부 테스트중인 기능이기 때문에 해당 기능을
-  사용하려면 특별한 초대권이 필요합니다. 신분당선 판교역 내부에 거대한 기둥들
-  사이로 햇빛이 드는 곳이 한 군데 있습니다. 그곳에서 18시 33분 광교 방향 열차가
-  들어올 때 오른팔을 하늘 높이 들고 '<b>알로호모라 (Alohomora)!</b>'를 외치면
-  물품보관함 4번 칸에 초대권이 배달됩니다. 영국 엑센트로 정확하게 발음해주셔야
-  합니다. 콩글리시 엑센트는 안돼요.
-</p>
-
-<p>
-  <img src="https://lh4.googleusercontent.com/PDrn72ifrP8BgwJ48LxCb78-nDZWFIyznC5qVNg_MJHGwgcu6CBoVRqYY7Rr4w54uktCXYpDtZCtPdbkQnNMeX5L6JnFIcXhW6ITnxpiE3h5PfbSE0fnWK1CXI9VEak_E5SfIrQG"
-    style="max-width:100%"/>
-</p>
+<div class="ui items" style="max-width:800px; margin:auto;">
+  <div class="item">
+    <div class="image">
+      <img src="https://lh4.googleusercontent.com/W515ygOtHEoIZRLwcxKrrXyRy942V_unf1q10B5tW3LIUlXj_Rl_GnrJGO6NPXlZJZvSok5hSGOkJClfD9AE_Xh5rqgmJq-SKM6_DXfSXieMBipBzJS1BXYfEC0VsyrO0F_kvR_b">
+    </div>
+    <div class="content">
+      <h2>판매자 등록</h2>
+      <div class="meta">
+      </div>
+      <div class="description" style="font-size:12pt">
+        <p>
+          [천원경매] 판매자 등록은 아직 내부 테스트중인 기능이기 때문에 해당
+          기능을 사용하려면 특별한 초대권이 필요합니다. 신분당선 판교역 내부에
+          거대한 기둥들 사이로 햇빛이 드는 곳이 한 군데 있습니다. 그곳에서 18시
+          33분 광교 방향 열차가 들어올 때 오른팔을 하늘 높이 들고
+          '<b>알로호모라 (Alohomora)!</b>'를 외치면 물품보관함 4번 칸에
+          초대권이 배달됩니다.  영국 엑센트로 정확하게 발음해주셔야 합니다.
+          콩글리시 엑센트는 안돼요.
+        </p>
+      </div>
+      <div class="extra">
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
